@@ -1,7 +1,10 @@
 2014-11-03 John Wu <John dot Wu at ACM dot org>
 	* src/ifade.cpp, src/ixpack.cpp, src/ixpale.cpp, src/ixzone.cpp:
 	add statement to log conditions leading to error code -13 to
-	address a problem reported by Fasika Daksa
+	debug a problem reported by Fasika Daksa
+	* src/whereParser.yy:1195 initialize tm_isdst to -1 to tell mktime
+	to figure out whether DST is in effect (a solution found by Jon
+	Strabala)
 
 2014-11-01 John Wu <John dot Wu at ACM dot org>
 	* src/whereParser.yy: update TO_UNIXTIME_LOCAL and TO_UNIXTIME_GMT
